# renamerApp

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  SPECS_MVP.md  app.db  labels_test.json  pyproject.toml
scripts/: classify_ocr_text.py  compare_llm_fallback_strategies.py  compare_ocr_llm_extraction.py  compare_pdf_ocr.py  debug_classification_report.py  import_labels_from_csv.py  inspect_db.py  migrate_labels_json.py  rebuild_label_embeddings.py  score_labels_llm.py  verify_increment3.py  verify_increment4.py  verify_increment5.py  verify_increment6.py
src/app/: container.py  settings.py
src/app/adapters/: __init__.py  embeddings_dummy.py  embeddings_openai.py  embeddings_sentence_transformers.py  google_drive_adapter.py  llm_mock.py  llm_openai.py  ocr_tesseract_adapter.py  sqlite_storage.py
src/app/domain/: __init__.py  doc_types.py  extraction_models.py  label_fallback.py  (+10 more)
tests/: test_doc_type_storage.py  test_doc_types.py  test_embeddings_dummy.py  test_extraction_domain.py  test_extraction_service.py  test_extraction_storage.py  test_job_cache_hydration_storage.py  test_jobs_service.py  test_label_classification_service.py  test_label_fallback.py  test_label_service.py  test_labels.py  test_llm_fallback_label_service.py  test_llm_label_storage.py  test_llm_openai_adapter.py  test_llm_port.py  test_ocr_service.py  test_ocr_storage.py  test_ports.py  test_presets_service.py  test_rename_service.py  test_report_rendering.py  test_report_service.py  test_schema_builder.py  test_schema_builder_service.py  test_schema_validation.py  test_similarity.py
(+24 files in other folders)
